[package]
name = "rainy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]

time = { path = "lib/time" }


env_logger = "0.10.0"
log = "0.4.18"
monsoon = "0.1.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = { version = "1.0.93"}
simple-logging = "2.0.2"
tokio = { version = "1.26.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.7.4"
chrono = "0.4.24"
